units-relation/tests/define-units-relation/fail_1_is_1_mul_2.stderr
error: bad expression
  --> tests/define-units-relation/fail_1_is_1_mul_2.rs:36:1
   |
36 | units_relation::define_units_relation! { U1 == U2 * U3:2 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `units_relation::define_units_relation` (in Nightly builds, run with -Z macro-backtrace for more info)
